    on an "abort-upgrade".  (Closes: #446856)
  * debian/control: Add a Breaks on meson to ensure that we have
    meson (>= 0.40.0) as the meson build system uses --wrap-mode.
    This is mostly relevant for backports.
  * Dh_Lib.pm: When printing commands (e.g. for doit), also show
    changes to the environment (when done as a part of the
    command).

 -- Niels Thykier <niels@thykier.net>  Sun, 14 Jan 2018 09:54:57 +0000

debhelper (11.1.2) unstable; urgency=medium

  * dh: Fix non-sense error about a missing "startpoint object
    method".

 -- Niels Thykier <niels@thykier.net>  Sun, 07 Jan 2018 21:31:40 +0000

debhelper (11.1.1) unstable; urgency=medium

  * dh: Fix an off-by-one in a compat check.  This fixes an
    internal error for compat 9 packages that requires dh to
    recurse into the debian/rules file.  Thanks to Helmut
    Grohne for reporting the bug.  (Closes: #886518)

 -- Niels Thykier <niels@thykier.net>  Sun, 07 Jan 2018 09:48:17 +0000

debhelper (11.1) unstable; urgency=medium

  [ Paul Tagliamonte ]
  * dh: Provide the DH_EXTRA_ADDONS environment as a method for
    e.g. derivatives to enable additional debhelper add-ons.
    It is *not* a replacement for the --with parameter (which
    package maintainers should still use).  (Closes: #570935)

  [ Hideki Yamane ]
  * Fix typo of unnecessary.  (Closes: #884574)

  [ Niels Thykier ]
  * dh_missing: Support wildcards in debian/not-installed.  Thanks
    to Maximiliano Curia for the suggestion.  (Closes: #884556)
  * dh_missing: Tweak handling of missing source directory and
    single binary packages.
  * dh_missing: Make --list-missing the default in compat 12.
    Thanks to Daniel Leidert and Christian Göttsche for the
    suggestions.  (Closes: #650129, #858834)
  * meson.pm: Set LC_ALL to C.UTF-8 when invoking meson and
    debcrossgen (helper tool for cross-building).  Thanks to
    Jeremy Bicha for the suggestion.  (Closes: #873831)